fixed issues with hourly ui being misaligned in mobile view

--- a/style.css
+++ b/style.css
@@ -860,27 +860,35 @@ https://codepen.io/anon/pen/vwOpBP
     /*hourly-card*/
 
     .hourNum{
-        margin-top:-2px;
-        margin-bottom: 30%;
         font-size:14px;
+        margin-bottom: 13px;
+        /*margin-top:-2px;*/
         /*font-weight:400;*/
     }
     .hourIcon{
-        width: 25px; 
-        margin-right: 0px; 
-        margin-bottom: 20%;
+        width: 28px; 
+        margin-bottom: 10px;
     }
     .rain-chance{
         font-size: 12px;
         font-weight: 100;
-        padding-bottom: 1%;
+        padding-bottom: 8px;
     }
     .sunlabel{
+        padding-top: 4px;
+        font-size: 15px;
+    }
+    .hourlytemp{
+        font-size: 18px;
+        font-weight:100;
         padding-top: 1px;
-        font-size: 12px;
+        /*border: solid rgb(224, 45, 14) 1px;*/
     }
 
     
+
+
+
     .humidity{
         font-size: 180%;
     }
